; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/format/wasm/extr_wasm.c_consume_s7_r.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/format/wasm/extr_wasm.c_consume_s7_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@read_i32_leb128 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i64*)* @consume_s7_r to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @consume_s7_r(i32* %0, i32 %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64* %2, i64** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i64, i64* @read_i32_leb128, align 8
  %12 = trunc i64 %11 to i32
  %13 = call i32 @consume_r(i32* %9, i32 %10, i64* %7, i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i64*, i64** %6, align 8
  %15 = icmp ne i64* %14, null
  br i1 %15, label %16, label %25

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  %18 = and i32 %17, 268435456
  %19 = shl i32 %18, 7
  %20 = load i32, i32* %8, align 4
  %21 = and i32 %20, 127
  %22 = or i32 %19, %21
  %23 = sext i32 %22 to i64
  %24 = load i64*, i64** %6, align 8
  store i64 %23, i64* %24, align 8
  br label %25

25:                                               ; preds = %16, %3
  %26 = load i64, i64* %7, align 8
  ret i64 %26
}

declare dso_local i32 @consume_r(i32*, i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
